syntax = "proto3";

package payment_statements;
option go_package = "github.com/preslavmihaylov/go-grpc-crash-course/gen/payment_statements";

import "common/types.proto";

service PaymentStatements {
  rpc CreateStatement(stream types.Payment) returns (types.PaymentStatement) {}
}
